--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
 
     function drawBlank(i, j, context) {
         context.fillStyle = "rgb(240,240,240)";
+        context.strokeStyle = "#FFFFFF";
         context.strokeRect(i * SZ_X, j * SZ_Y, SZ_X, SZ_Y);
     }
 
