--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <title>epicell</title>
     <script type="text/javascript" src="js/zepto.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161595892-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-161595892-1');
+    </script>
 </head>
 <body>
 <h3>
