--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>epicell</title>
     <script type="text/javascript" src="js/zepto.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta property="og:image" content="https://raw.githubusercontent.com/knalum/epicell/master/screen_static.png" />
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-161595892-1"></script>
     <script>
